# dataforce.studio

./: .gitignore  LICENSE  README.md
backend/: .env.example  .env.test  Dockerfile  README.md  alembic.ini  pyproject.toml
backend/dataforce_studio/: server.py  service.py  settings.py
backend/dataforce_studio/api/: auth.py  orbits.py  orbits_members.py  organization.py  organization_invites.py  organization_members.py  organization_routes.py  user_invites.py  user_routes.py
backend/dataforce_studio/handlers/: auth.py  bucket_secrets.py  collections.py  emails.py  ml_models.py  orbits.py  organizations.py  permissions.py
backend/dataforce_studio/infra/: db.py  dependencies.py  encryption.py  endpoint_responses.py  exceptions.py  openapi.py  security.py
backend/dataforce_studio/models/: __init__.py  auth.py  base.py  bucket_secrets.py  collection.py  errors.py  invite.py  ml_models.py  orbit.py  organization.py  orm.py  permissions.py  stats.py  token_black_list.py  user.py
backend/dataforce_studio/repositories/: base.py  bucket_secrets.py  collections.py  invites.py  ml_models.py  orbits.py  organization_members.py  organizations.py  permissions.py  token_blacklist.py  users.py
backend/dataforce_studio/schemas/: base.py  bucket_secrets.py  invite.py  ml_models.py  orbit.py  organization.py  permissions.py  stats.py  user.py
backend/dataforce_studio/utils/: organizations.py  permissions.py
backend/migrations/: env.py
backend/migrations/versions/: 001_create_users_table.py  001_initial_migration.py  002_add_permissions_tables.py  002_create_token_black_list.py  002_orbits_creation.py  002_stats_email_sending.py  003_add_bucket_secrets.py  003_add_org_tables_and_migrate_existing_.py  003_add_org_tables_and_update_users.py  004_add_organization_invites_table.py  004_added_file_index_field_to_mlmodel.py  004_mlmodel_file_index_and_organization_.py  005_add_mlmodel_file_name_and_description_.py  005_added_user_relationship_to_.py  (+1 more)
backend/tests/: conftest.py
backend/utils/: db.py
docs/: .env  (+3 more)
wasm/: .gitignore  build.sh  flatten.py  pyproject.toml
wasm/dfs_webworker/: __init__.py  llm.py  tabular.py
(+317 files in other folders)
