[build-system]

requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
dependencies = [
]
name = "dfs-webworker"
version = "0.1.0"
authors = [
  { name="Oleh Kostromin", email="oleh@dataforce.solutions1" },
]
description = ""
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

